<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/purple_200"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnN0"
        android:layout_width="184dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN0Text"
        android:text="@string/btnN0Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonCommaClick"
        android:text="@string/btnCommaText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnN0" />

    <Button
        android:id="@+id/btnN7"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN7Text"
        android:text="@string/btnN7Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnN1"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN1Text"
        android:text="@string/btnN1Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnN2"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN2Text"
        android:text="@string/btnN2Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN0"
        app:layout_constraintStart_toEndOf="@+id/btnN1" />

    <Button
        android:id="@+id/btnN3"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN3Text"
        android:text="@string/btnN3Text"
        app:layout_constraintBottom_toTopOf="@+id/btnComma"
        app:layout_constraintStart_toEndOf="@+id/btnN2" />

    <Button
        android:id="@+id/btnN4"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN4Text"
        android:text="@string/btnN4Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnN5"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN5Text"
        android:text="@string/btnN5Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN2"
        app:layout_constraintStart_toEndOf="@+id/btnN4" />

    <Button
        android:id="@+id/btnN6"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN6Text"
        android:text="@string/btnN6Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN3"
        app:layout_constraintStart_toEndOf="@+id/btnN5" />

    <Button
        android:id="@+id/btnN8"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN8Text"
        android:text="@string/btnN8Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN5"
        app:layout_constraintStart_toEndOf="@+id/btnN7" />

    <Button
        android:id="@+id/btnN9"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonNumClick"
        android:tag="@string/btnN9Text"
        android:text="@string/btnN9Text"
        app:layout_constraintBottom_toTopOf="@+id/btnN6"
        app:layout_constraintStart_toEndOf="@+id/btnN8" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonClearClick"
        android:text="@string/btnClearText"
        app:layout_constraintBottom_toTopOf="@+id/btnN7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBksp"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonBKSPClick"
        android:text="@string/btnBkspText"
        app:layout_constraintBottom_toTopOf="@+id/btnN8"
        app:layout_constraintStart_toEndOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonSignClick"
        android:text="@string/btnSignText"
        app:layout_constraintBottom_toTopOf="@+id/btnN9"
        app:layout_constraintStart_toEndOf="@+id/btnBksp" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonResultClick"
        android:text="@string/btnResultText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnComma" />

    <Button
        android:id="@+id/btnOpPlus"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonOperClick"
        android:text="@string/btnOpPlusText"
        app:layout_constraintBottom_toTopOf="@+id/btnResult"
        app:layout_constraintStart_toEndOf="@+id/btnN3" />

    <Button
        android:id="@+id/btnOpMinus"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonOperClick"
        android:text="@string/btnOpMinusText"
        app:layout_constraintBottom_toTopOf="@+id/btnOpPlus"
        app:layout_constraintStart_toEndOf="@+id/btnN6" />

    <Button
        android:id="@+id/btnOpMult"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonOperClick"
        android:text="@string/btnOpMultText"
        app:layout_constraintBottom_toTopOf="@+id/btnOpMinus"
        app:layout_constraintStart_toEndOf="@+id/btnN9" />

    <Button
        android:id="@+id/btnOpDiv"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ButtonOperClick"
        android:text="@string/btnOpDivText"
        app:layout_constraintBottom_toTopOf="@+id/btnOpMult"
        app:layout_constraintStart_toEndOf="@+id/btnSign" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="376dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/white"
        android:gravity="bottom|right"
        android:text="1234567890"
        android:textColor="@color/black"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>